# TRAK-25L

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindOptiX90.cmake  README.md
shaders/: fragment.frag.glsl  vertex.vert.glsl
sources/hittable/: CMakeLists.txt  hittable.cu  hittable.h
sources/hittablelist/: CMakeLists.txt  hittablelist.cu  hittablelist.h
sources/kernel/: CMakeLists.txt  kernel.cu  kernel.h
sources/ray/: CMakeLists.txt  ray.cu  ray.h
sources/shader/: CMakeLists.txt  shader.cpp  shader.h
sources/utils/: CMakeLists.txt  utils.cu  utils.h
src/: main.cpp
